--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
         "sass": "^1.32.11",
         "vite": "^3.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "vue-router": "^4.1.6",
+        "vuex": "^4.1.0"
     }
 }
