--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "@vitejs/plugin-vue": "^3.0.1",
         "axios": "^0.27",
         "bootstrap": "^5.2.1",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "sass": "^1.32.11",
-        "vite": "^3.0.0",
-        "vue": "^3.2.37"
+        "vite": "^3.0.0"
     },
     "dependencies": {
-        "vue-router": "^4.1.6",
-        "vuex": "^4.1.0"
+        "@vitejs/plugin-vue2": "^2.0.0",
+        "material-icons": "^1.12.0",
+        "vue": "^2.7.13",
+        "vue-router": "^3.6.5",
+        "vuesax": "^3.12.2",
+        "vuex": "^3.6.2"
     }
 }
