--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
-        "php-open-source-saver/jwt-auth": "^2.0"
+        "maatwebsite/excel": "^3.1",
+        "php-open-source-saver/jwt-auth": "^2.0",
+        "psr/simple-cache": "2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
