--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@vitejs/plugin-vue2": "^2.0.0",
         "boxicons": "^2.1.4",
         "chalk": "^4.1.2",
+        "laravel-vue-pagination": "^2.3.1",
         "sass": "^1.32.11",
         "vue": "^2.7.13",
         "vue-router": "^3.6.5",
