--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "rap2hpoutre/laravel-log-viewer": "^2.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
